--- a/reports/2021-01.html
+++ b/reports/2021-01.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchCompany establishment</div>
+<div class="milestone-content">I. Foundation Research: Company Establishment</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,16 +173,9 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Company establishment marked the beginning of our journey to solve Lightning Network optimization challenges using quantum computing. We initiated the theoretical formulation of LN-QUBO v0.1, focusing on transforming LN's routing problem into a Quadratic Unconstrained Binary Optimization (QUBO) format that quantum annealers can process. The core research team was assembled, consisting of one quantum physicist specializing in quantum annealing algorithms and one LND engineer with deep expertise in Lightning Network architecture. Simultaneously, we secured cloud access to D-Wave Advantage 4.1 (5000+ Qubits, 15-way connectivity) through AWS Braket, enabling us to begin experimental work on quantum optimization of network routing problems.
 
-Additional Technical Details:
-基礎研究Company establishment
-
-[Translation needed: LN-QUBOの理論的定式化（v0.1）に着手]
-
-
-LN-QUBOのTheoretical formulation（v0.1）にInitiated
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>LN-QUBOのTheoretical formulation（v0.1）Initiated</p></div>
+<p>I. Foundation Research: Company Establishment</p>
+<p>LN-QUBO Theoretical Formulation (v0.1) Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -191,16 +184,9 @@ LN-QUBOのTheoretical formulation（v0.1）にInitiated
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">The founding team conducted an angel round to secure initial funding for research infrastructure and team building. We established our first office and began building the R&amp;D infrastructure necessary for quantum computing research. The core team hiring process focused on bringing together experts in quantum physics and distributed ledger technology, creating a unique interdisciplinary research group dedicated to solving LN's optimization challenges through quantum approaches.
 
-Additional Business Details:
-LN-QUBOの理論的定式化（v0
-
-Foundersによるエンジェルラウンド
-
-
-FoundersによるAngel round
-
 <p><strong>Additional Business Details:</strong></p>
-<p>By foundersAngel round</p></div>
+<p>Company Establishment</p>
+<p>Angel Round by Founders</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -209,17 +195,9 @@ FoundersによるAngel round
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">AWS Braket (Advantage 4.1) contract
 
-Hardware Specifications:
-AWS Braket (Advantage 4.1) 契約 8
-
-Hardware Specifications:
-[Translation needed: AWS Braket (Advantage 4.1) 契約 8]
-
-Hardware Specifications:
-コアチーム（量子物理学者x1, LNDエンジニアx1）Adoption [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Core team（Quantum physicistx1, LND engineerx1）Hired</p></div>
+<p>AWS Braket (Advantage 4.1) Contract 8</p>
+<p>Core Team (Quantum Physicist x1, LND Engineer x1) Hired</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -228,16 +206,8 @@ Hardware Specifications:
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">The Lightning Network was experiencing significant growing pains as it transitioned from experimental to practical infrastructure. Users were facing daily routing failures, and the network's complexity was growing exponentially with each new node. This created a clear market need for advanced optimization solutions that could handle the NP-hard nature of multi-objective routing problems.
 
-Additional Market Information:
-LN成長痛が顕在化 3
-
-[Translation needed: LN成長痛が顕在化 3]
-
-
-AWS Braket (Advantage 4.1) Contract 8LNGrowing painsがBecame apparent 3
-
 <p><strong>Additional Market Information:</strong></p>
-<p>AWS Braket (Advantage 4.1) Contract 8LN's growing pains became apparent 3</p></div>
+<p>LN Growing Pains Became Apparent 3</p></div>
 </div>
 </div>
 <footer class="footer">
