--- a/reports/2021-02.html
+++ b/reports/2021-02.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchLN-QUBO v0.1（Fees・ホップ数）のMathematical modelDefined OfficeContract R&amp;D infrastructureConstruction Advantage 4.1 8Bitcoin price reached all-time high</div>
+<div class="milestone-content">I. Foundation Research: LN-QUBO v0.1 Mathematical Model (Fees and Hop Count) Defined, Office Contract, R&amp;D Infrastructure Construction, Advantage 4.1 8, Bitcoin Price Reached All-Time High</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">We completed the mathematical foundation of LN-QUBO v0.1, defining the initial cost function that focused on two primary objectives: fee minimization and hop count reduction. The mathematical model was designed to encode LN routing decisions as binary variables in a QUBO matrix, where each potential path through the network could be represented as a binary choice (use path or not). This foundational work established the framework for all future model iterations.
 
-Additional Technical Details:
-基礎研究LN-QUBO v0
-
-
-I. Foundation ResearchLN-QUBO v0.1（手数料・ホップ数）のMathematical modelを定義 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchLN-QUBO v0.1（Fees・ホップ数）のMathematical modelDefined</p></div>
+<p>I. Foundation Research: LN-QUBO v0.1 Mathematical Model (Fees and Hop Count) Defined</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,11 +183,9 @@ I. Foundation ResearchLN-QUBO v0.1（手数料・ホップ数）のMathematical 
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Office space was secured and R&amp;D infrastructure construction began. We set up computational resources for quantum annealing experiments and established development environments for Lightning Network simulation. The team began preparing initial pitch materials for seed round fundraising, focusing on the unique value proposition of quantum-accelerated network optimization.
 
-Additional Business Details:
-1（手数料・ホップ数）の数学モデルを定義
-
-
-OfficeContract</div>
+<p><strong>Additional Business Details:</strong></p>
+<p>Office Contract</p>
+<p>R&amp;D Infrastructure Construction</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -202,14 +194,8 @@ OfficeContract</div>
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1 8
-
-Hardware Specifications:
-Advantage 4.1 8BitcoinPriceがAll-time high圏へ [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>R&amp;D infrastructureConstruction</p></div>
+<p>Advantage 4.1 8</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -218,14 +204,8 @@ Advantage 4.1 8BitcoinPriceがAll-time high圏へ [Note: Some Japanese text may 
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Bitcoin reached all-time high price levels, driving increased interest in Layer 2 scaling solutions. The market recognized the critical importance of efficient payment routing as transaction volumes grew, creating favorable conditions for research into advanced optimization techniques.
 
-Additional Market Information:
-R&amp;Dインフラ構築
-
-
-Advantage 4.1 8BitcoinPriceがAll-time high圏へ [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Market Information:</strong></p>
-<p>Advantage 4.1 8Bitcoin price reached all-time high</p></div>
+<p>Bitcoin Price Reached All-Time High</p></div>
 </div>
 </div>
 <footer class="footer">
