--- a/reports/2021-04.html
+++ b/reports/2021-04.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchLNネットワークSimulator（v0.1）のDevelopmentInitiated シードVCとのInitial面談Started Advantage 4.1</div>
+<div class="milestone-content">I. Foundation Research: LN Network Simulator (v0.1) Development Initiated, Initial Meetings with Seed VCs Started, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Development of the LN network simulator v0.1 began, designed to model network behavior with 100 nodes. The simulator was built based on existing research frameworks like CLoTH, adapted to test our QUBO-based routing algorithms. This tool became essential for validating our theoretical models before deploying them on actual quantum hardware.
 
-Additional Technical Details:
-基礎研究LNネットワークSimulator（v0
-
-
-I. Foundation ResearchLNネットワークSimulator（v0.1）のDevelopmentにInitiated
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchLNネットワークSimulator（v0.1）のDevelopmentInitiated</p></div>
+<p>I. Foundation Research: LN Network Simulator (v0.1) Development Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Foundation ResearchLNネットワークSimulator（v0.1）のDevelopmentにIn
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Initial meetings with seed-stage venture capital firms began. We presented our research vision and early technical progress, seeking investors who understood both the quantum computing and blockchain technology landscapes.
 
-Additional Business Details:
-1）の開発に着手
-
-
-SeedVCとの初期面談Started [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>シードVCとのInitial面談Started</p></div>
+<p>Initial Meetings with Seed VCs Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ SeedVCとの初期面談Started [Note: Some Japanese text may need manual transl
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-SeedVCとの初期面談開始
-
-Hardware Specifications:
-Advantage 4.1</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <footer class="footer">
