--- a/reports/2021-05.html
+++ b/reports/2021-05.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchSimulatorv0.1Completed（100ノード規模） Advantage 4.1</div>
+<div class="milestone-content">I. Foundation Research: Simulator v0.1 Completed (100 Nodes Scale), Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">The LN simulator v0.1 was completed and became operational, capable of modeling networks with 100 nodes. This milestone enabled us to begin systematic testing of our QUBO-based routing algorithms in a controlled simulation environment. The simulator allowed us to generate synthetic network topologies and payment flows, providing valuable data for algorithm development.
 
-Additional Technical Details:
-基礎研究Simulatorv0
-
-
-I. Foundation ResearchSimulatorv0.1Completion（100ノード規模） [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchSimulatorv0.1Completed（100ノード規模）</p></div>
+<p>I. Foundation Research: Simulator v0.1 Completed (100 Nodes Scale)</p></div>
 </div>
 </div>
 <div class="content-section">
