--- a/reports/2021-06.html
+++ b/reports/2021-06.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchLN-QUBO v0.1モデルのSimulatorへのImplementation Advantage 4.1</div>
+<div class="milestone-content">I. Foundation Research: LN-QUBO v0.1 Model Implementation into Simulator, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Implementation of the LN-QUBO v0.1 model into the simulator was completed. This integration allowed us to test our quantum-inspired routing algorithms against classical approaches. We began running comparative simulations to measure performance improvements in routing success rates and fee optimization.
 
-Additional Technical Details:
-基礎研究LN-QUBO v0
-
-
-I. Foundation ResearchLN-QUBO v0.1モデルのSimulatorへのImplementation</div>
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Foundation Research: LN-QUBO v0.1 Model Implementation into Simulator</p></div>
 </div>
 </div>
 <div class="content-section">
