--- a/reports/2021-07.html
+++ b/reports/2021-07.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchSmall-scale networkでのv0.1ベンチマーク（対 Dijkstra法） Advantage 4.1</div>
+<div class="milestone-content">I. Foundation Research: v0.1 Benchmark on Small-Scale Network (vs Dijkstra Algorithm), Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Benchmarking of v0.1 model began on small-scale networks, comparing our QUBO-based approach against classical algorithms like Dijkstra's shortest path algorithm. Initial results showed promising improvements in fee optimization, though the full potential of quantum approaches would require larger problem scales and more sophisticated models.
 
-Additional Technical Details:
-基礎研究小規模ネットワークでのv0
-
-
-I. Foundation Research小規模ネットワークでのv0.1Benchmark（対 Dijkstra法） [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchSmall-scale networkでのv0.1ベンチマーク（対 Dijkstra法）</p></div>
+<p>I. Foundation Research: v0.1 Benchmark on Small-Scale Network (vs Dijkstra Algorithm)</p></div>
 </div>
 </div>
 <div class="content-section">
