--- a/reports/2021-08.html
+++ b/reports/2021-08.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchBenchmark results（Fees30%Reduction）をAnalysis シードラウンドNegotiationFull-scale Advantage 4.1LNトランザクション数が増加 2</div>
+<div class="milestone-content">I. Foundation Research: Benchmark Results (30% Fee Reduction) Analysis, Seed Round Negotiations Full-Scale, Advantage 4.1, LN Transaction Count Increased 2</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Analysis of benchmark results revealed a 30% reduction in fees compared to classical routing algorithms. This significant improvement validated our core hypothesis that quantum annealing could provide superior solutions for multi-objective optimization problems. The results motivated us to design the next model iteration (v0.2) that would incorporate liquidity constraints.
 
-Additional Technical Details:
-基礎研究Benchmark結果（手数料30%削減）を分析
-
-
-I. Foundation ResearchBenchmark結果（手数料30%削減）をAnalysis [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchBenchmark results（Fees30%Reduction）をAnalysis</p></div>
+<p>I. Foundation Research: Benchmark Results (30% Fee Reduction) Analysis</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Foundation ResearchBenchmark結果（手数料30%削減）をAnalysis [Note: 
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">The promising benchmark results accelerated seed round negotiations. We began serious discussions with multiple VC firms, using the 30% fee reduction as a key proof point of our technology's potential.
 
-Additional Business Details:
-Seedラウンド交渉本格化
-
-
-SeedラウンドNegotiation本格化 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>シードラウンドNegotiationFull-scale</p></div>
+<p>Seed Round Negotiations Full-Scale</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ SeedラウンドNegotiation本格化 [Note: Some Japanese text may need manual t
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1LN transactions数がIncrease加 2 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1LNトランザクション数が増加 2</p></div>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -218,13 +203,8 @@ Advantage 4.1LN transactions数がIncrease加 2 [Note: Some Japanese text may ne
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Lightning Network transaction volumes increased significantly, demonstrating the network's growth and the increasing importance of efficient routing solutions.
 
-Additional Market Information:
-LNトランザクション数が増加 2
-
-[Translation needed: LN transactions数が増加 2]
-
-
-Advantage 4.1LN transactions数がIncrease加 2 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>LN Transaction Count Increased 2</p></div>
 </div>
 </div>
 <footer class="footer">
