--- a/reports/2021-09.html
+++ b/reports/2021-09.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchLN-QUBO v0.2（Liquidity constraints）のDesignInitiated Advantage 4.1</div>
+<div class="milestone-content">I. Foundation Research: LN-QUBO v0.2 (Liquidity Constraints) Design Initiated, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Design work began on LN-QUBO v0.2, which would introduce liquidity constraints as a critical component of the optimization model. This represented a major advancement, as liquidity management is one of the most challenging aspects of Lightning Network operations. The new model would penalize routing attempts that exceeded channel capacity, addressing a fundamental limitation of earlier approaches.
 
-Additional Technical Details:
-基礎研究LN-QUBO v0
-
-
-I. Foundation ResearchLN-QUBO v0.2（流動性制約）のDesignにInitiated [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchLN-QUBO v0.2（Liquidity constraints）のDesignInitiated</p></div>
+<p>I. Foundation Research: LN-QUBO v0.2 (Liquidity Constraints) Design Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
