--- a/reports/2021-10.html
+++ b/reports/2021-10.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchSimulatorv0.2（1,000ノード規模）へExpansion Advantage 4.1 (AWS Braket GA) 8</div>
+<div class="milestone-content">I. Foundation Research: Simulator Expanded to v0.2 (1,000 Nodes Scale), Advantage 4.1 (AWS Braket GA) 8</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Expansion of the simulator to v0.2 was completed, now capable of modeling networks with 1,000 nodes. This 10x scale increase allowed us to test our algorithms on more realistic network topologies, approaching the complexity of actual Lightning Network deployments. The expanded simulator enabled more comprehensive testing of liquidity constraint handling.
 
-Additional Technical Details:
-基礎研究Simulatorv0
-
-
-I. Foundation ResearchSimulatorv0.2（1,000ノード規模）へ拡張 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchSimulatorv0.2（1,000ノード規模）へExpansion</p></div>
+<p>I. Foundation Research: Simulator Expanded to v0.2 (1,000 Nodes Scale)</p></div>
 </div>
 </div>
 <div class="content-section">
