--- a/reports/2021-12.html
+++ b/reports/2021-12.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation Research2022年 R&amp;DRoadmap策定 Hired活動Full-scale（量子エンジニアx1） Advantage 4.1--- 2022年 (Y2): モデルの高度化とベンチマーク ---</div>
+<div class="milestone-content">I. Foundation Research: 2022 R&amp;D Roadmap Planning Completed, Full-Scale Hiring Activities (Quantum Engineer x1), Advantage 4.1 --- 2022 (Y2): Model Enhancement and Benchmark ---</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">The 2022 R&amp;D roadmap was formulated, outlining our path from theoretical research to large-scale simulation. The plan included expanding simulation capabilities to 10,000 nodes, implementing hybrid quantum-classical solvers, and developing more sophisticated optimization models.
 
-Additional Technical Details:
-基礎研究2022年 R&amp;Dロードマップ策定
-
-
-Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation Research2022年 R&amp;DRoadmap策定</p></div>
+<p>I. Foundation Research: 2022 R&amp;D Roadmap Planning Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Recruitment activities intensified as we sought to hire an additional quantum engineer. The expanded team would enable parallel research tracks and faster iteration on model improvements. We also began planning for academic publication of our early research results.
 
-Additional Business Details:
-採用活動本格化（量子エンジニアx1）
-
-
-Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>Hired活動Full-scale（量子エンジニアx1）</p></div>
+<p>Full-Scale Hiring Activities (Quantum Engineer x1)</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,9 @@ Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1--- 2022年 (Y2): モデルの高度化とBenchmark --- [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1--- 2022年 (Y2): モデルの高度化とベンチマーク ---</p></div>
+<p>Advantage 4.1</p>
+<p>--- 2022 (Y2): Model Enhancement and Benchmark ---</p></div>
 </div>
 </div>
 <footer class="footer">
