--- a/reports/2022-01.html
+++ b/reports/2022-01.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model EnhancementLN-QUBO v0.2（Liquidity constraints）のImplementationInitiated 2022年キックオフ コーポレートサイトv1ローンチ Advantage 4.1</div>
+<div class="milestone-content">I. Model Enhancement: LN-QUBO v0.2 (Liquidity Constraints) Implementation Initiated, 2022 Kickoff, Corporate Website v1 Launch, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Implementation of LN-QUBO v0.2 with liquidity constraints began. This version introduced capacity constraints as penalty terms in the QUBO matrix, ensuring that routing solutions respect channel liquidity limits. The implementation required careful mathematical modeling to balance multiple objectives: fee minimization, hop count, and liquidity constraints.
 
-Additional Technical Details:
-モデル高度化LN-QUBO v0
-
-
-I. Model EnhancementLN-QUBO v0.2（流動性制約）のImplementationにInitiated [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model EnhancementLN-QUBO v0.2（Liquidity constraints）のImplementationInitiated</p></div>
+<p>I. Model Enhancement: LN-QUBO v0.2 (Liquidity Constraints) Implementation Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -195,19 +189,11 @@ I. Model EnhancementLN-QUBO v0.2（流動性制約）のImplementationにInitiat
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Additional Business Details:
-2（流動性制約）の実装に着手
-
-Hardware Specifications:
-2022年キックオフ
-
-コーポレートサイトv1Launch
-
-Hardware Specifications:
-Advantage 4.1
-
+<p><strong>Additional Business Details:</strong></p>
+<p>2022 Kickoff</p>
+<p>Corporate Website v1 Launch</p>
 <p><strong>Hardware Specifications:</strong></p>
-<p>コーポレートサイトv1ローンチ</p></div>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <footer class="footer">
