--- a/reports/2022-02.html
+++ b/reports/2022-02.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model EnhancementD-WaveHybrid solver 23 のUtilizedConsiderationStarted Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: D-Wave Hybrid Solver 23 Utilization Consideration Started, Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Evaluation of D-Wave's hybrid solver began. Hybrid solvers combine quantum and classical computing approaches, allowing us to tackle larger problem instances than pure quantum annealing alone. We began testing hybrid approaches to determine optimal problem decomposition strategies for LN routing optimization.
 
-
-I. Model EnhancementD-Waveハイブリッドソルバー 23 の活用検討Started [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model EnhancementD-WaveHybrid solver 23 のUtilizedConsiderationStarted</p></div>
+<p>I. Model Enhancement: D-Wave Hybrid Solver 23 Utilization Consideration Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,8 +183,8 @@ I. Model EnhancementD-Waveハイブリッドソルバー 23 の活用検討Start
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Hardware Specifications:
-I. Model EnhancementD-Waveハイブリッドソルバー 23 の活用検討Started [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1 (Hybrid)</p></div>
 </div>
 </div>
 <footer class="footer">
