--- a/reports/2022-03.html
+++ b/reports/2022-03.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancementv0.2ImplementationCompleted Simulatorv0.3（10,000ノード）へExpansion Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: v0.2 Implementation Completed, Simulator Expanded to v0.3 (10,000 Nodes), Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Implementation of v0.2 was completed, and the simulator was expanded to v0.3, now capable of modeling networks with 10,000 nodes and 100,000 channels. This represented a 100x scale increase from our initial 100-node simulator, enabling testing on network topologies that closely matched real-world Lightning Network deployments.
 
-Additional Technical Details:
-モデル高度化v0
-
-
-I. Model Enhancementv0.2Implementation完了 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model Enhancementv0.2ImplementationCompleted</p></div>
+<p>I. Model Enhancement: v0.2 Implementation Completed</p>
+<p>Simulator Expanded to v0.3 (10,000 Nodes)</p></div>
 </div>
 </div>
 <div class="content-section">
