--- a/reports/2022-05.html
+++ b/reports/2022-05.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model EnhancementSimulationResultsAnalysis Liquidity depletion rateが大幅にImprovement Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: Simulation Results Analysis, Liquidity Depletion Rate Significantly Improved, Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Analysis of simulation results revealed significant improvements in liquidity depletion rates. The v0.2 model's capacity constraints successfully prevented routing attempts that would fail due to insufficient channel liquidity, resulting in more reliable payment routing and better network resource utilization.
 
-Additional Technical Details:
-モデル高度化シミュレーション結果分析
-
-
-流動性枯渇率が大幅に改善 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model EnhancementSimulationResultsAnalysis</p></div>
+<p>I. Model Enhancement: Simulation Results Analysis</p>
+<p>Liquidity Depletion Rate Significantly Improved</p></div>
 </div>
 </div>
 <div class="content-section">
