--- a/reports/2022-06.html
+++ b/reports/2022-06.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model EnhancementLN-QUBO v1.0（Reliability・Rebalancing term）のDesignInitiated アーリーアドバイザーとして著名なLSPオペレーターとContract Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: LN-QUBO v1.0 (Reliability and Rebalancing Terms) Design Initiated, Contract with Renowned LSP Operator as Early Advisor, Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Design work began on LN-QUBO v1.0, which would introduce two critical new components: reliability scoring and rebalancing terms. The reliability component would incorporate node uptime, channel age, and historical jamming data to predict routing success probability. The rebalancing term represented a major innovation, optimizing not just for successful payment routing but also for improving long-term node liquidity balance.
 
-Additional Technical Details:
-モデル高度化LN-QUBO v1
-
-
-I. Model EnhancementLN-QUBO v1.0（信頼性・リバランス項）のDesignにInitiated [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model EnhancementLN-QUBO v1.0（Reliability・Rebalancing term）のDesignInitiated</p></div>
+<p>I. Model Enhancement: LN-QUBO v1.0 (Reliability and Rebalancing Terms) Design Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Model EnhancementLN-QUBO v1.0（信頼性・リバランス項）のDesignに
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">An early advisor relationship was established with a renowned LSP operator, providing valuable real-world insights into Lightning Network operations and routing challenges. This partnership helped ground our theoretical research in practical network realities.
 
-Additional Business Details:
-0（信頼性・リバランス項）の設計に着手
-
-
-Advantage 4.1 (Hybrid)
-
 <p><strong>Additional Business Details:</strong></p>
-<p>アーリーアドバイザーとして著名なLSPオペレーターとContract</p></div>
+<p>Contract with Renowned LSP Operator as Early Advisor</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ Advantage 4.1 (Hybrid)
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Hardware Specifications:
-アーリーアドバイザーとして著名なLSPオペレーターと契約
-
-Hardware Specifications:
-Advantage 4.1 (Hybrid)</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1 (Hybrid)</p></div>
 </div>
 </div>
 <footer class="footer">
