--- a/reports/2022-07.html
+++ b/reports/2022-07.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancementv1.0のMathematical model（Rebalancing term）Defined Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: v1.0 Mathematical Model (Rebalancing Term) Defined, Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">The mathematical model for v1.0's rebalancing Hamiltonian was defined. This represented a breakthrough in routing optimization, as it enabled the system to consider not just immediate payment success but also the long-term health of node liquidity. The rebalancing term rewards routing paths that improve the balance between inbound and outbound liquidity, enhancing node sustainability and capital efficiency.
 
-Additional Technical Details:
-モデル高度化v1
-
-
-I. Model Enhancementv1.0のMathematical model（リバランス項）を定義 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model Enhancementv1.0のMathematical model（Rebalancing term）Defined</p></div>
+<p>I. Model Enhancement: v1.0 Mathematical Model (Rebalancing Term) Defined</p></div>
 </div>
 </div>
 <div class="content-section">
