--- a/reports/2022-09.html
+++ b/reports/2022-09.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancementv1.0ImplementationCompleted Conferenceにてv0.2の研究ResultsをAnnouncement Technical credibilityをGained Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: v1.0 Implementation Completed, v0.2 Research Results Announced at Conference, Technical Credibility Gained, Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Implementation of v1.0 was completed. The full-featured model now incorporated fee optimization, hop count minimization, liquidity constraints, reliability scoring, and rebalancing optimization in a unified QUBO formulation.
 
-Additional Technical Details:
-モデル高度化v1
-
-
-I. Model Enhancementv1.0Implementation完了 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model Enhancementv1.0ImplementationCompleted</p></div>
+<p>I. Model Enhancement: v1.0 Implementation Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,9 @@ I. Model Enhancementv1.0Implementation完了 [Note: Some Japanese text may need 
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Research results from v0.2 were presented at IEEE Blockchain 2022, establishing technical credibility and gaining recognition in the academic community. The presentation highlighted our unique quantum-accelerated approach to routing optimization.
 
-Additional Business Details:
-0実装完了
-
-
-技術的信頼を獲得 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>Conferenceにてv0.2の研究ResultsをAnnouncement</p></div>
+<p>v0.2 Research Results Announced at Conference</p>
+<p>Technical Credibility Gained</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,14 +194,8 @@ Additional Business Details:
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Hardware Specifications:
-学会にてv0
-
-Hardware Specifications:
-Advantage 4.1 (Hybrid)
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Technical credibilityをGained</p></div>
+<p>Advantage 4.1 (Hybrid)</p></div>
 </div>
 </div>
 <footer class="footer">
