--- a/reports/2022-12.html
+++ b/reports/2022-12.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancement2022年Summary Benchmark resultsをWhite paperとしてPublished Advantage 4.1 (Hybrid)--- 2023年 (Y3): 「冬」の時代とStrategy的ピボット ---</div>
+<div class="milestone-content">I. Model Enhancement: 2022 Summary, Benchmark Results Published as White Paper, Advantage 4.1 (Hybrid) --- 2023 (Y3): "Winter" Era and Strategic Pivot ---</div>
 </div>
 </div>
 <div class="content-section">
@@ -179,19 +179,12 @@
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Additional Technical Details:
-モデル高度化2022年総括
-
-Benchmark結果をホワイトペーパーとしてPublished [Note: Some Japanese text may need manual translation]
-
-Hardware Specifications:
-Advantage 4.1 (Hybrid)--- 2023年 (Y3): 「冬」の時代と戦略的ピボット --- [Note: Some Japanese text may need manual translation]
-
-Additional Technical Details:
-I. Model Enhancement2022年Summary
-
+<p><strong>Additional Technical Details:</strong></p>
+<p>I. Model Enhancement: 2022 Summary</p>
+<p>Benchmark Results Published as White Paper</p>
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1 (Hybrid)--- 2023年 (Y3): 「冬」の時代とStrategy的ピボット ---</p></div>
+<p>Advantage 4.1 (Hybrid)</p>
+<p>--- 2023 (Y3): "Winter" Era and Strategic Pivot ---</p></div>
 </div>
 </div>
 <footer class="footer">
