--- a/reports/2023-01.html
+++ b/reports/2023-01.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. BenchmarkLN-QUBO v1.0の論文をAcademic journalにSubmitted シリーズAのPreparationFull-scale VCとのInitial接触 Advantage 4.1 23Web3へのVCInvestmentが凍結Started 25</div>
+<div class="milestone-content">I. Benchmark: LN-QUBO v1.0 Paper Submitted to Academic Journal, Series A Preparation Full-Scale, Initial Contact with VCs, Advantage 4.1 23, VC Investment in Web3 Freeze Started 25</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">A full academic paper on LN-QUBO v1.0 was submitted to a peer-reviewed journal. The paper provided comprehensive documentation of our mathematical model, simulation methodology, and benchmark results. This academic publication would establish our research in the scientific literature.
 
-Additional Technical Details:
-BenchmarkLN-QUBO v1
-
-
-I. BenchmarkLN-QUBO v1.0のPaperを学術誌にSubmitted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. BenchmarkLN-QUBO v1.0の論文をAcademic journalにSubmitted</p></div>
+<p>I. Benchmark: LN-QUBO v1.0 Paper Submitted to Academic Journal</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,9 @@ I. BenchmarkLN-QUBO v1.0のPaperを学術誌にSubmitted [Note: Some Japanese te
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Series A fundraising preparation intensified. Initial contacts were made with venture capital firms, presenting our research progress and future plans. The academic paper submission strengthened our credibility as a serious research organization.
 
-Additional Business Details:
-0のPaperを学術誌に投稿
-
-
-VCとの初期接触 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>シリーズAのPreparationFull-scale</p></div>
+<p>Series A Preparation Full-Scale</p>
+<p>Initial Contact with VCs</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,14 +194,8 @@ VCとの初期接触 [Note: Some Japanese text may need manual translation]
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1 23
-
-Hardware Specifications:
-Advantage 4.1 23Web3へのVC投資が凍結Started 25 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>VCとのInitial接触</p></div>
+<p>Advantage 4.1 23</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -221,16 +204,8 @@ Advantage 4.1 23Web3へのVC投資が凍結Started 25 [Note: Some Japanese text 
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">VC investment in Web3 and blockchain sectors began to freeze, creating challenging fundraising conditions. Investors became more selective, focusing on companies with clear paths to commercialization.
 
-Additional Market Information:
-Web3へのVC投資が凍結開始 25
-
-[Translation needed: Web3へのVC投資が凍結開始 25]
-
-
-Advantage 4.1 23Web3へのVC投資が凍結Started 25 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Market Information:</strong></p>
-<p>Advantage 4.1 23Web3へのVCInvestmentが凍結Started 25</p></div>
+<p>VC Investment in Web3 Freeze Started 25</p></div>
 </div>
 </div>
 <footer class="footer">
