--- a/reports/2023-04.html
+++ b/reports/2023-04.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic PivotBRC-20によるオンチェーンCongestionDataをCollection・Analysis 「AIによる金融インフラ最適化」のNarrativeでVCApproachをResumed Advantage 4.1</div>
+<div class="milestone-content">II. Strategic Pivot: BRC-20 On-Chain Congestion Data Collection and Analysis, VC Approach Resumed with "AI for Financial Infrastructure Optimization" Narrative, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">BRC-20 token congestion data was collected and analyzed. The massive on-chain fee spikes caused by BRC-20 token minting created a clear demonstration of Bitcoin's scalability limitations and the absolute necessity of Layer 2 solutions like Lightning Network. This data was incorporated into our fee optimization model to better handle high-fee scenarios.
 
-Additional Technical Details:
-戦略的ピボットBRC-20によるオンチェーン混雑データを収集・分析
-
-
-「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>II. Strategic PivotBRC-20によるオンチェーンCongestionDataをCollection・Analysis</p></div>
+<p>II. Strategic Pivot: BRC-20 On-Chain Congestion Data Collection and Analysis</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ Additional Technical Details:
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">With the new 'AI for financial infrastructure optimization' narrative, VC outreach was resumed. The BRC-20 congestion provided a concrete example of market need for our optimization solutions, strengthening our pitch to AI-focused investors.
 
-Additional Business Details:
-「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開
-
-
-「AIによる金融インフラ最適化」のナラティブでVCアプローチを再開 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>「AIによる金融インフラ最適化」のNarrativeでVCApproachをResumed</p></div>
+<p>VC Approach Resumed with "AI for Financial Infrastructure Optimization" Narrative</p></div>
 </div>
 </div>
 <div class="content-section">
