--- a/reports/2023-05.html
+++ b/reports/2023-05.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic PivotBRC-20のCongestionを「我々のソリューションの必要性」として資料にIncorporated 12 AIInvestment家からの関心GainedにSuccess Advantage 4.1BRC-20によるオンチェーンCongestionがピーク 12</div>
+<div class="milestone-content">II. Strategic Pivot: BRC-20 Congestion Incorporated into Materials as "Necessity of Our Solution" 12, Successfully Gained Interest from AI Investors, Advantage 4.1, BRC-20 On-Chain Congestion Reached Peak 12</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Successfully gained interest from AI investors who saw the connection between quantum optimization and AI/ML applications. The strategic pivot was proving effective, opening doors that had been closed when we positioned as a blockchain company.
 
-Additional Business Details:
-AI投資家からの関心獲得に成功
-
-
-Advantage 4.1BRC-20によるオンチェーンCongestionがPeak 12
-
 <p><strong>Additional Business Details:</strong></p>
-<p>AIInvestment家からの関心GainedにSuccess</p></div>
+<p>Successfully Gained Interest from AI Investors</p>
+<p>BRC-20 Congestion Incorporated into Materials as "Necessity of Our Solution" 12</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,11 +184,8 @@ Advantage 4.1BRC-20によるオンチェーンCongestionがPeak 12
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1BRC-20によるオンチェーンCongestionがPeak 12
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1BRC-20によるオンチェーンCongestionがピーク 12</p></div>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -202,13 +194,8 @@ Advantage 4.1BRC-20によるオンチェーンCongestionがPeak 12
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">BRC-20 on-chain congestion reached its peak, creating maximum visibility for Bitcoin scalability challenges and Layer 2 solutions.
 
-Additional Market Information:
-BRC-20によるオンチェーン混雑がピーク 12
-
-[Translation needed: BRC-20によるオンチェーン混雑がピーク 12]
-
-
-II. Strategic PivotBRC-20のCongestionを「我々のソリューションの必要性」として資料に組み込む 12 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>BRC-20 On-Chain Congestion Reached Peak 12</p></div>
 </div>
 </div>
 <footer class="footer">
