--- a/reports/2023-06.html
+++ b/reports/2023-06.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic PivotTaproot Assets (Taro) 12 のTechnical specificationsのAnalysisStarted シリーズAのNegotiationがConcretized Advantage 4.1</div>
+<div class="milestone-content">II. Strategic Pivot: Taproot Assets (Taro) 12 Technical Specifications Analysis Started, Series A Negotiations Concretized, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Technical specification analysis of Taproot Assets (formerly Taro) began. This protocol would enable issuance of multiple asset types on Lightning Network, fundamentally changing routing complexity. Our optimization models would need to handle multi-asset routing, requiring significant model extensions.
 
-Additional Technical Details:
-戦略的ピボットTaproot Assets (Taro) 12 の技術仕様の分析開始
-
-
-シリーズAのNegotiationが具体化 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>II. Strategic PivotTaproot Assets (Taro) 12 のTechnical specificationsのAnalysisStarted</p></div>
+<p>II. Strategic Pivot: Taproot Assets (Taro) 12 Technical Specifications Analysis Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ Additional Technical Details:
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Series A negotiations became more concrete. The combination of AI positioning, clear market need (demonstrated by BRC-20), and future market opportunity (Taproot Assets) created a compelling investment thesis.
 
-Additional Business Details:
-シリーズAの交渉が具体化
-
-
-Advantage 4.1
-
 <p><strong>Additional Business Details:</strong></p>
-<p>シリーズAのNegotiationがConcretized</p></div>
+<p>Series A Negotiations Concretized</p></div>
 </div>
 </div>
 <div class="content-section">
