--- a/reports/2023-07.html
+++ b/reports/2023-07.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic PivotLN-QUBO v1.5（Multi-asset support）の基礎DesignInitiated Advantage 4.1</div>
+<div class="milestone-content">II. Strategic Pivot: LN-QUBO v1.5 (Multi-Asset Support) Foundation Design Initiated, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Foundation design work began on LN-QUBO v1.5, which would support multi-asset routing optimization. This required extending our QUBO model to handle routing decisions across multiple asset types simultaneously, significantly increasing problem complexity.
 
-Additional Technical Details:
-戦略的ピボットLN-QUBO v1
-
-
-II. Strategic PivotLN-QUBO v1.5（マルチアセットResponse）の基礎DesignにInitiated [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>II. Strategic PivotLN-QUBO v1.5（Multi-asset support）の基礎DesignInitiated</p></div>
+<p>II. Strategic Pivot: LN-QUBO v1.5 (Multi-Asset Support) Foundation Design Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
