--- a/reports/2023-09.html
+++ b/reports/2023-09.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic PivotシリーズAのTerm sheetにAgreement Advantage 4.1</div>
+<div class="milestone-content">II. Strategic Pivot: Series A Term Sheet Agreement, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
