--- a/reports/2023-12.html
+++ b/reports/2023-12.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic Pivot2024年Roadmap（アルファテスト）策定 アルファパートナー候補（LSP/取引所）のリストアップ Advantage 4.1--- 2024年 (Y4): Advantage2プロトタイプとアルファテスト ---</div>
+<div class="milestone-content">II. Strategic Pivot: 2024 Roadmap (Alpha Test) Planning Completed, Alpha Partner Candidates (LSPs/Exchanges) Listed, Advantage 4.1 --- 2024 (Y4): Advantage2 Prototype and Alpha Test ---</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Alpha partner candidates (LSPs and exchanges) were identified and listed. We began initial outreach to potential research partners who could provide real network data and testing environments. The goal was to validate our models in production-like conditions without impacting live network operations.
 
-Additional Business Details:
-アルファPartners候補（LSP/取引所）のリストアップ
-
-
-II. Strategic Pivot2024年Roadmap（AlphaTest）Planning [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>アルファパートナー候補（LSP/取引所）のリストアップ</p></div>
+<p>II. Strategic Pivot: 2024 Roadmap (Alpha Test) Planning Completed</p>
+<p>Alpha Partner Candidates (LSPs/Exchanges) Listed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,11 +184,9 @@ II. Strategic Pivot2024年Roadmap（AlphaTest）Planning [Note: Some Japanese te
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1--- 2024年 (Y4): Advantage2PrototypeとAlphaTest --- [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1--- 2024年 (Y4): Advantage2プロトタイプとアルファテスト ---</p></div>
+<p>Advantage 4.1</p>
+<p>--- 2024 (Y4): Advantage2 Prototype and Alpha Test ---</p></div>
 </div>
 </div>
 <footer class="footer">
