--- a/reports/2024-01.html
+++ b/reports/2024-01.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. PrototypeD-WaveがAdvantage2プロトタイプ（1200+Qubit）をAnnouncement 10 パートナーシップ担当者（Head of BD）Hired Advantage2 Proto 10</div>
+<div class="milestone-content">III. Prototype: D-Wave Announced Advantage2 Prototype (1200+ Qubits) 10, Head of Business Development Hired, Advantage2 Proto 10</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">D-Wave announced the Advantage2 prototype (1200+ Qubits) with significantly reduced noise. This next-generation hardware represented a major advancement in quantum annealing capabilities. We immediately began evaluating how this hardware could accelerate our research and improve optimization performance.
 
-
-III. PrototypeD-WaveがAdvantage2Prototype（1200+Qubit）をPresented 10
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. PrototypeD-WaveがAdvantage2プロトタイプ（1200+Qubit）をAnnouncement 10</p></div>
+<p>III. Prototype: D-Wave Announced Advantage2 Prototype (1200+ Qubits) 10</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,11 +183,8 @@ III. PrototypeD-WaveがAdvantage2Prototype（1200+Qubit）をPresented 10
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">A Head of Business Development (BD) was hired to lead partnership development efforts. This role was critical for establishing alpha test relationships with major LSPs and exchanges who could provide real network data for testing.
 
-
-Partnersシップ担当者（Head of Business Development）Adoption [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>パートナーシップ担当者（Head of BD）Hired</p></div>
+<p>Head of Business Development Hired</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -198,9 +192,6 @@ Partnersシップ担当者（Head of Business Development）Adoption [Note: Some
 <div class="milestone-item">
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
-
-Hardware Specifications:
-III. PrototypeD-WaveがAdvantage2Prototype（1200+Qubit）をPresented 10
 
 <p><strong>Hardware Specifications:</strong></p>
 <p>Advantage2 Proto 10</p></div>
