--- a/reports/2024-02.html
+++ b/reports/2024-02.html
@@ -158,13 +158,13 @@
 <a class="back-link" href="../index.html">← Back to Report List</a>
 <header>
 <div class="report-date">Created February 28, 2024</div>
-<h1>Technical Milestones：Advantage2プロトタイプ への早期アクセス権を確保</h1>
+<h1>Technical Milestones: Early Access Rights to Advantage2 Prototype Secured</h1>
 </header>
 <div class="content-section">
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. PrototypeAdvantage2プロトタイプへのEarly access rightsをSecured アルファパートナー候補とのInitialNegotiationStarted Advantage2 Proto</div>
+<div class="milestone-content">III. Prototype: Early Access Rights to Advantage2 Prototype Secured, Initial Negotiations with Alpha Partner Candidates Started, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Early access rights to the Advantage2 prototype were secured. This gave us priority access to the new hardware, enabling us to begin migration work and performance testing ahead of general availability.
 
-
-AlphaPartners候補との初期NegotiationStarted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. PrototypeAdvantage2プロトタイプへのEarly access rightsをSecured</p></div>
+<p>III. Prototype: Early Access Rights to Advantage2 Prototype Secured</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,11 +183,8 @@ AlphaPartners候補との初期NegotiationStarted [Note: Some Japanese text may 
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Initial negotiations began with alpha partner candidates. We presented our research results and alpha test proposal, seeking partners who would provide anonymized real network data for shadow testing.
 
-
-AlphaPartners候補との初期NegotiationStarted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>アルファパートナー候補とのInitialNegotiationStarted</p></div>
+<p>Initial Negotiations with Alpha Partner Candidates Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -199,8 +193,8 @@ AlphaPartners候補との初期NegotiationStarted [Note: Some Japanese text may 
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-III. PrototypeAdvantage2Prototypeへの早期Access権を確保 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
