--- a/reports/2024-03.html
+++ b/reports/2024-03.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. PrototypeLN-QUBO v1.5モデルをAdvantage2 ProtoにMigration Advantage2 Proto</div>
+<div class="milestone-content">III. Prototype: LN-QUBO v1.5 Model Migration to Advantage2 Proto, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Migration of LN-QUBO v1.5 model to Advantage2 prototype was completed. This migration required adapting our QUBO formulations to take advantage of the prototype's improved connectivity and reduced noise characteristics. Initial testing showed promising performance improvements.
 
-
-III. PrototypeLN-QUBO v1.5モデルをAdvantage2 Protoに移行 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. PrototypeLN-QUBO v1.5モデルをAdvantage2 ProtoにMigration</p></div>
+<p>III. Prototype: LN-QUBO v1.5 Model Migration to Advantage2 Proto</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,8 +183,8 @@ III. PrototypeLN-QUBO v1.5モデルをAdvantage2 Protoに移行 [Note: Some Japa
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-III. PrototypeLN-QUBO v1.5モデルをAdvantage2 Protoに移行 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
