--- a/reports/2024-04.html
+++ b/reports/2024-04.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. PrototypeAdvantage2 Proto上でv1.5のベンチマークExecution Advantage2 Proto</div>
+<div class="milestone-content">III. Prototype: v1.5 Benchmark Execution on Advantage2 Proto, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Benchmark execution of v1.5 on Advantage2 prototype revealed a 20x speedup in Time-to-Solution compared to Advantage 4.1. This dramatic improvement was not just incremental—it fundamentally changed the nature of our optimization approach. What previously required 10-minute batch processing could now be executed in 30-second near-real-time intervals, opening new possibilities for dynamic routing optimization.
 
-
-III. PrototypeAdvantage2 Proto上でv1.5のBenchmarkExecution [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. PrototypeAdvantage2 Proto上でv1.5のベンチマークExecution</p></div>
+<p>III. Prototype: v1.5 Benchmark Execution on Advantage2 Proto</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -196,8 +193,8 @@ III. PrototypeAdvantage2 Proto上でv1.5のBenchmarkExecution [Note: Some Japane
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-III. PrototypeAdvantage2 Proto上でv1.5のBenchmarkExecution [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
