--- a/reports/2024-05.html
+++ b/reports/2024-05.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. PrototypeTime-to-SolutionがAdvantage 4.1比で20倍AccelerationすることをDemonstrated 10 このDataをWeaponに、LSP/取引所とのNegotiationをAcceleration Advantage2 Proto</div>
+<div class="milestone-content">III. Prototype: Time-to-Solution Demonstrated 20x Acceleration vs Advantage 4.1 10, Using This Data to Accelerate Negotiations with LSPs/Exchanges, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Negotiations with potential alpha partners intensified. The speedup data provided concrete evidence of our technology's practical viability, addressing concerns about quantum computing's applicability to real-time financial infrastructure.
 
-Additional Business Details:
-1比で20倍高速化することを実証 10
-
-
-Advantage2 Proto
-
 <p><strong>Additional Business Details:</strong></p>
-<p>このDataをWeaponに、LSP/取引所とのNegotiationをAcceleration</p></div>
+<p>Time-to-Solution Demonstrated 20x Acceleration vs Advantage 4.1 10</p>
+<p>Using This Data to Accelerate Negotiations with LSPs/Exchanges</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,11 +184,8 @@ Advantage2 Proto
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-このデータを武器に、LSP/取引所との交渉を加速
-
-Hardware Specifications:
-III. PrototypeTime-to-SolutionがAdvantage 4.1比で20x高速化することを実証 10 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
