--- a/reports/2024-06.html
+++ b/reports/2024-06.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. Prototype「Near real-time optimization（30秒バッチ）」のDemoをDevelopment Advantage2 Proto</div>
+<div class="milestone-content">III. Prototype: "Near Real-Time Optimization (30-Second Batch)" Demo Development, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -172,12 +172,8 @@
 <div class="milestone-item">
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">An internal demo of 'near-real-time optimization (30-second batch)' was developed. This demonstration showed how our 20x speedup enabled routing optimization at intervals that were compatible with real network operations, rather than requiring long batch processing delays.
-
-
-Advantage2 Proto
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. Prototype「Near real-time optimization（30秒バッチ）」のDemoをDevelopment</p></div>
+<p>III. Prototype: "Near Real-Time Optimization (30-Second Batch)" Demo Development</p></div>
 </div>
 </div>
 <div class="content-section">
