--- a/reports/2024-07.html
+++ b/reports/2024-07.html
@@ -158,13 +158,13 @@
 <a class="back-link" href="../index.html">← Back to Report List</a>
 <header>
 <div class="report-date">Created July 31, 2024</div>
-<h1>Business Milestones：大手LSP 3社とアルファテスト契約を締結</h1>
+<h1>Business Milestones: Alpha Test Contracts Signed with 3 Major LSPs</h1>
 </header>
 <div class="content-section">
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. Alpha TestingMajor LSP 3社とアルファテストContractをSigned Advantage2 ProtoLNが成熟し、大手取引所がHired 13</div>
+<div class="milestone-content">III. Alpha Testing: Alpha Test Contracts Signed with 3 Major LSPs, Advantage2 Proto, LN Matured with Major Exchanges Adopting 13</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">The alpha test contracts marked a major milestone in transitioning from simulation-based research to real-world validation. These partnerships provided credibility and demonstrated market interest in our optimization approach.
 
-
-III. Alpha Testing大手LSP 3 companiesとAlphaTestContractを締結 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>Advantage2 ProtoLNが成熟し、大手取引所がHired 13</p></div>
+<p>III. Alpha Testing: Alpha Test Contracts Signed with 3 Major LSPs</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,8 +183,8 @@ III. Alpha Testing大手LSP 3 companiesとAlphaTestContractを締結 [Note: Some
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-Advantage2 ProtoLNMaturationし、大手取引所がAdoption 13 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -196,13 +193,8 @@ Advantage2 ProtoLNMaturationし、大手取引所がAdoption 13 [Note: Some Japa
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Lightning Network had matured significantly, with major exchanges adopting LN for payment processing. These large-scale deployments faced real routing optimization challenges, creating natural partnership opportunities.
 
-Additional Market Information:
-LNが成熟し、大手取引所が採用 13
-
-[Translation needed: LN成熟し、大手取引所が採用 13]
-
-
-Advantage2 ProtoLNMaturationし、大手取引所がAdoption 13 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>LN Matured with Major Exchanges Adopting 13</p></div>
 </div>
 </div>
 <footer class="footer">
