--- a/reports/2024-08.html
+++ b/reports/2024-08.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. Alpha TestingパートナーのAnonymizedリアルData 13 のReceivedとAnalysis Alpha versionAPI（v0.1）とDashboardをProvided Advantage2 ProtoLNの流動性問題が課題として認識 29</div>
+<div class="milestone-content">III. Alpha Testing: Partner Anonymized Real Data 13 Received and Analyzed, Alpha Version API (v0.1) and Dashboard Provided, Advantage2 Proto, LN Liquidity Problems Recognized as Challenge 29</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Anonymized real network data was received from alpha partners and analyzed. This real data provided insights into actual network topologies, payment patterns, and routing challenges that differed from our simulation assumptions. An alpha version API (v0.1) and dashboard were provided to partners for testing and feedback.
 
-Additional Technical Details:
-アルファテストPartnersの匿名化リアルデータ 13 の受領と分析
-
-
-Alpha版API（v0.1）とダッシュボードを提供 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. Alpha TestingパートナーのAnonymizedリアルData 13 のReceivedとAnalysis</p></div>
+<p>III. Alpha Testing: Partner Anonymized Real Data 13 Received and Analyzed</p>
+<p>Alpha Version API (v0.1) and Dashboard Provided</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,11 +184,8 @@ Alpha版API（v0.1）とダッシュボードを提供 [Note: Some Japanese text
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-Advantage2 ProtoLN流動性問題がChallengeとしてRecognition 29 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage2 ProtoLNの流動性問題が課題として認識 29</p></div>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -202,13 +194,8 @@ Advantage2 ProtoLN流動性問題がChallengeとしてRecognition 29 [Note: Some
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Liquidity management problems in Lightning Network were being recognized as critical challenges by node operators and LSPs, validating the importance of our optimization research.
 
-Additional Market Information:
-LN流動性問題が課題として認識 29
-
-[Translation needed: LN流動性問題が課題として認識 29]
-
-
-Advantage2 ProtoLN流動性問題がChallengeとしてRecognition 29 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>LN Liquidity Problems Recognized as Challenge 29</p></div>
 </div>
 </div>
 <footer class="footer">
