--- a/reports/2024-10.html
+++ b/reports/2024-10.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. Alpha TestingShadow testResultsのAnalysis SimulationをExceededResultsをConfirmed Advantage2 ProtoLNの収益性への関心高まる 21</div>
+<div class="milestone-content">III. Alpha Testing: Shadow Test Results Analysis, Simulation Results Exceeded and Confirmed, Advantage2 Proto, Interest in LN Profitability Increasing 21</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,9 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Analysis of shadow test results confirmed that our simulation-based predictions were exceeded in real-world conditions. The actual network data revealed optimization opportunities that our simulations had not fully captured, leading to even better performance than anticipated.
 
-
-シミュレーションを上回る成果を確認 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>III. Alpha TestingShadow testResultsのAnalysis</p></div>
+<p>III. Alpha Testing: Shadow Test Results Analysis</p>
+<p>Simulation Results Exceeded and Confirmed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,11 +184,8 @@
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-Advantage2 ProtoLN収益性へのInterestIncreasing 21 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage2 ProtoLNの収益性への関心高まる 21</p></div>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -199,13 +194,8 @@ Advantage2 ProtoLN収益性へのInterestIncreasing 21 [Note: Some Japanese text
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Interest in Lightning Network profitability research was growing, with node operators and LSPs seeking ways to improve capital efficiency and routing performance.
 
-Additional Market Information:
-LN収益性への関心高まる 21
-
-[Translation needed: LN収益性への関心高まる 21]
-
-
-Advantage2 ProtoLN収益性へのInterestIncreasing 21 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>Interest in LN Profitability Increasing 21</p></div>
 </div>
 </div>
 <footer class="footer">
