--- a/reports/2024-12.html
+++ b/reports/2024-12.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">III. Alpha Testing2024年Summary</div>
+<div class="milestone-content">III. Alpha Testing: 2024 Summary</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,16 +173,9 @@
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">High praise was received from alpha partners, who recognized the value of our optimization approach. Discussions began about transitioning from alpha test relationships to ongoing research partnerships. The successful alpha test phase validated our research direction and demonstrated practical value to network operators.
 
-Additional Business Details:
-アルファテスト成功
-
-[Translation needed: Commercial化（]
-
-
-2025年のCommercial化（GA）計画をPlanning [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>2025年の商用化（GA）計画を策定</p></div>
+<p>Alpha Test Success</p>
+<p>2025 Commercialization (GA) Plan Planning Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -191,17 +184,9 @@ Additional Business Details:
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-2025年のCommercial化（GA）計画を策定
-
-Hardware Specifications:
-[Translation needed: Partnersから高評価を獲得]
-
-Hardware Specifications:
-Partnersから高評価を獲得 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>パートナーからHigh evaluationをGained</p></div>
+<p>Advantage2 Proto</p>
+<p>High Evaluation Gained from Partners</p></div>
 </div>
 </div>
 <footer class="footer">
