--- a/reports/2025-02.html
+++ b/reports/2025-02.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GA Preparation商用ソリューションのBrand nameを「Pathfinder-Q」にDecided マーケティングチームStrengthening Launch eventPreparation Advantage2 Proto</div>
+<div class="milestone-content">IV. GA Preparation: Brand Name "Pathfinder-Q" Decided, Marketing Team Strengthening, Launch Event Preparation, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,10 @@
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Brand announcement preparation for Pathfinder-Q began. We positioned it as an open source research project rather than a commercial product, emphasizing our commitment to advancing Lightning Network optimization through open research collaboration.
 
-Additional Business Details:
-マーケティングチーム増強
-
-
-IV. GA PreparationCommercialソリューションのブランド名を「Pathfinder-Q」に決定 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>マーケティングチームStrengthening</p></div>
+<p>IV. GA Preparation: Brand Name "Pathfinder-Q" Decided</p>
+<p>Marketing Team Strengthening</p>
+<p>Launch Event Preparation</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +185,8 @@ IV. GA PreparationCommercialソリューションのブランド名を「Pathfin
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-ローンチイベント準備
-
-Hardware Specifications:
-IV. GA PreparationCommercialソリューションのブランド名を「Pathfinder-Q」に決定 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Launch eventPreparation</p></div>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
