--- a/reports/2025-04.html
+++ b/reports/2025-04.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GA PreparationD-Wave Advantage2 GA 9 へのMigrationPreparation Presalesで5社のContractをGained Advantage2 Proto</div>
+<div class="milestone-content">IV. GA Preparation: Migration Preparation to D-Wave Advantage2 GA 9, 5 Research Partnership Contracts Gained, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Migration preparation to D-Wave Advantage2 GA began. The full-spec hardware would provide even better performance than the prototype we had been using, enabling larger problem instances and faster optimization.
 
-
-IV. GA PreparationD-Wave Advantage2 GA 9 への移行Preparation [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GA PreparationD-Wave Advantage2 GA 9 へのMigrationPreparation</p></div>
+<p>IV. GA Preparation: Migration Preparation to D-Wave Advantage2 GA 9</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,11 +183,8 @@ IV. GA PreparationD-Wave Advantage2 GA 9 への移行Preparation [Note: Some Jap
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Research partnerships were established with 5 initial organizations. These partnerships would provide ongoing collaboration for testing, validation, and improvement of Pathfinder-Q. The focus was on research collaboration rather than commercial contracts.
 
-
-Presalesで5 companiesのContractを獲得 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>Presalesで5社のContractをGained</p></div>
+<p>5 Research Partnership Contracts Gained</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -199,8 +193,8 @@ Presalesで5 companiesのContractを獲得 [Note: Some Japanese text may need ma
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-IV. GA PreparationD-Wave Advantage2 GA 9 への移行Preparation [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
