--- a/reports/2025-06.html
+++ b/reports/2025-06.html
@@ -158,13 +158,13 @@
 <a class="back-link" href="../index.html">← Back to Report List</a>
 <header>
 <div class="report-date">Created June 30, 2025</div>
-<h1>Technical Milestones：Pathfinder-Q v1.0、20-wayトポロジを活用し問題規模を5倍に拡大</h1>
+<h1>Technical Milestones: Pathfinder-Q v1.0, Utilizing 20-way Topology to Expand Problem Scale by 5x</h1>
 </header>
 <div class="content-section">
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GAPathfinder-Q APIをv1.0にUpdated 20-wayTopology 34 をUtilizedし、Problem scaleを5倍にExpanded Advantage2 GA</div>
+<div class="milestone-content">IV. GAPathfinder-Q API Updated to v1.0, Utilizing 20-way Topology 34 to Expand Problem Scale by 5x with Advantage2 GA</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Pathfinder-Q API was updated to v1.0, taking advantage of Advantage2's 20-way topology to expand problem scale by 5x. This meant we could now optimize routing for much larger network subgraphs, approaching the scale of entire regional Lightning Network deployments.
 
-Additional Technical Details:
-GAPathfinder-Q APIをv1
-
-
-IV. GAPathfinder-Q APIをv1.0にアップデート
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GAPathfinder-Q APIをv1.0にUpdated</p></div>
+<p>IV. GAPathfinder-Q API Updated to v1.0</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -190,10 +184,10 @@ IV. GAPathfinder-Q APIをv1.0にアップデート
 <div class="milestone-content">Advantage2 GA
 
 Hardware Specifications:
-20-wayトポロジ 34 を活用し、問題規模を5倍に拡大
+Utilizing 20-way Topology 34 to Expand Problem Scale by 5x
 
 Hardware Specifications:
-IV. GAPathfinder-Q APIをv1.0にアップデート</div>
+IV. GAPathfinder-Q API Updated to v1.0</div>
 </div>
 </div>
 <footer class="footer">
