--- a/reports/2025-07.html
+++ b/reports/2025-07.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GALND 35 向けプラグイン（v1.0）のDevelopment Advantage2 GA</div>
+<div class="milestone-content">IV. GA: LND 35 Plugin (v1.0) Development Completed, Advantage2 GA</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Development of LND plugin v1.0 was completed. This plugin enabled seamless integration of Pathfinder-Q optimization with LND nodes, allowing operators to use quantum-accelerated routing without modifying their core node software. The plugin architecture ensured compatibility with existing LND infrastructure.
 
-
-IV. GALND 35 向けPlugin（v1.0）のDevelopment [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GALND 35 向けプラグイン（v1.0）のDevelopment</p></div>
+<p>IV. GA: LND 35 Plugin (v1.0) Development Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,8 +183,8 @@ IV. GALND 35 向けPlugin（v1.0）のDevelopment [Note: Some Japanese text may 
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 GA
 
-Hardware Specifications:
-IV. GALND 35 向けPlugin（v1.0）のDevelopment [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 GA</p></div>
 </div>
 </div>
 <footer class="footer">
