--- a/reports/2025-08.html
+++ b/reports/2025-08.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GACLN 36 向けプラグイン（v1.0）のDevelopment Advantage2 GA</div>
+<div class="milestone-content">IV. GA: CLN 36 Plugin (v1.0) Development Completed, Advantage2 GA</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,11 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Development of CLN plugin v1.0 was completed. With both LND and CLN plugins available, Pathfinder-Q could now be used with the two major Lightning Network implementations, significantly expanding potential research collaboration opportunities.
 
-
-IV. GACLN 36 向けPlugin（v1.0）のDevelopment [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GACLN 36 向けプラグイン（v1.0）のDevelopment</p></div>
+<p>IV. GA: CLN 36 Plugin (v1.0) Development Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -186,8 +183,8 @@ IV. GACLN 36 向けPlugin（v1.0）のDevelopment [Note: Some Japanese text may 
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 GA
 
-Hardware Specifications:
-IV. GACLN 36 向けPlugin（v1.0）のDevelopment [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 GA</p></div>
 </div>
 </div>
 <footer class="footer">
