--- a/reports/2025-09.html
+++ b/reports/2025-09.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. Commercialization「Pathfinder-Q」 API v1.0を商用ローンチ LND/CLNプラグインをSimultaneous release 最初の商用顧客5社がProduction operationStarted Advantage2 GA (Hybrid) 23CLN v25.09リリース 36</div>
+<div class="milestone-content">IV. Commercialization: Pathfinder-Q API v1.0 Commercial Launch, LND/CLN Plugins Simultaneous Release, First 5 Research Partners Started Production Operations, Advantage2 GA (Hybrid) 23, CLN v25.09 Release 36</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Pathfinder-Q API v1.0 was released as open source. LND and CLN plugins were released simultaneously, making the optimization technology available to the entire Lightning Network community. This open source release represented the culmination of 5 years of research and development.
 
-Additional Technical Details:
-v1.0を
-
-
-IV. Commercialization「Pathfinder-Q」 API v1.0をCommercialLaunch
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. Commercialization「Pathfinder-Q」 API v1.0を商用ローンチ</p></div>
+<p>IV. Commercialization: Pathfinder-Q API v1.0 Commercial Launch</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,9 @@ IV. Commercialization「Pathfinder-Q」 API v1.0をCommercialLaunch
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">First 5 research partners began deployment testing. These partners were early adopters who had participated in alpha testing and were now integrating Pathfinder-Q into their node operations for ongoing research collaboration. The focus remained on research and optimization improvement rather than commercial deployment.
 
-Additional Business Details:
-0をCommercialローンチ
-
-
-IV. Commercialization「Pathfinder-Q」 API v1.0をCommercialLaunch
-
 <p><strong>Additional Business Details:</strong></p>
-<p>LND/CLNプラグインをSimultaneous release</p></div>
+<p>LND/CLN Plugins Simultaneous Release</p>
+<p>First 5 Research Partners Started Production Operations</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,14 +194,9 @@ IV. Commercialization「Pathfinder-Q」 API v1.0をCommercialLaunch
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 GA (Hybrid)
 
-Hardware Specifications:
-Advantage2 GA (Hybrid) 23
-
-Hardware Specifications:
-Advantage2 GA (Hybrid) 23CLN v25.09Release 36
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>最初の商用顧客5社がProduction operationStarted</p></div>
+<p>Advantage2 GA (Hybrid) 23</p>
+<p>CLN v25.09 Release 36</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -221,16 +205,9 @@ Advantage2 GA (Hybrid) 23CLN v25.09Release 36
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">CLN v25.09 was released, providing updated plugin architecture that supported our integration approach. The Lightning Network ecosystem was ready for advanced optimization tools.
 
-Additional Market Information:
-CLN v25.09リリース 36
-
-CLN v25.09リリース 36
-
-
-LND/CLNPluginを同時Release [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Market Information:</strong></p>
-<p>Advantage2 GA (Hybrid) 23CLN v25.09リリース 36</p></div>
+<p>CLN v25.09 Release 36</p>
+<p>LND/CLN Plugins Simultaneous Release</p></div>
 </div>
 </div>
 <footer class="footer">
