--- a/reports/2025-11.html
+++ b/reports/2025-11.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. Commercializationv0.5 betaを一部のパートナーに限定Published Advantage2 GA (Hybrid)</div>
+<div class="milestone-content">IV. Commercialization: v0.5 Beta Limited Release to Selected Partners, Advantage2 GA (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,16 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Taproot Assets multi-asset routing beta was released to a limited set of research partners. This limited release allowed focused testing and feedback collection before broader community release. Partners provided valuable insights into multi-asset routing challenges and optimization opportunities.
 
-Additional Technical Details:
-v0.5 betaを一部の
-
-[Translation needed: v0.5 betaを一部の]
-
-
-IV. Commercializationv0.5 betaを一部のPartnersに限定Published [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. Commercializationv0.5 betaを一部のパートナーに限定Published</p></div>
+<p>IV. Commercialization: v0.5 Beta Limited Release to Selected Partners</p></div>
 </div>
 </div>
 <div class="content-section">
