--- a/reports/2021-03.html
+++ b/reports/2021-03.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation ResearchD-Wave Leap cloud serviceへのInitial accessとテスト For seed roundPitch deckv1Created Advantage 4.1</div>
+<div class="milestone-content">I. Foundation Research: Initial Access to D-Wave Leap Cloud Service and Testing, Pitch Deck v1 Created for Seed Round, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Initial access to D-Wave Leap cloud service was secured and testing began. We conducted preliminary experiments to understand the performance characteristics of Advantage 4.1 for our specific optimization problems. These early tests helped us understand the embedding challenges and computational requirements for solving LN routing problems on quantum hardware.
 
-Additional Technical Details:
-基礎研究D-Wave Leapクラウドサービスへの初期アクセスとテスト
-
-
-I. Foundation ResearchD-Wave Leapクラウドサービスへの初期AccessとTest [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation ResearchD-Wave Leap cloud serviceへのInitial accessとテスト</p></div>
+<p>I. Foundation Research: Initial Access to D-Wave Leap Cloud Service and Testing</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Foundation ResearchD-Wave Leapクラウドサービスへの初期AccessとTe
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Version 1 of the pitch deck for seed round fundraising was created. The deck emphasized our unique approach of combining quantum computing with Lightning Network optimization, highlighting the potential for breakthrough improvements in routing efficiency and network performance.
 
-Additional Business Details:
-Seedラウンド向けピッチデックv1作成
-
-
-Seedラウンド向けピッチデックv1作成 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>For seed roundPitch deckv1Created</p></div>
+<p>Pitch Deck v1 Created for Seed Round</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,8 +193,8 @@ Seedラウンド向けピッチデックv1作成 [Note: Some Japanese text may n
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-I. Foundation ResearchD-Wave Leapクラウドサービスへの初期AccessとTest [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <footer class="footer">
