--- a/reports/2021-11.html
+++ b/reports/2021-11.html
@@ -158,13 +158,13 @@
 <a class="back-link" href="../index.html">← Back to Report List</a>
 <header>
 <div class="report-date">Created November 30, 2021</div>
-<h1>Business Milestones：Taproot の追い風を受け、シードラウンド($3M)をクローズ</h1>
+<h1>Business Milestones: Seed Round ($3M) Closed with Tailwind from Taproot</h1>
 </header>
 <div class="content-section">
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Foundation Researchv0.2の基礎研究Completed シードラウンド($3M)Closed R&amp;Dチームを5名にStrengthening Advantage 4.1TaprootアップグレードSuccess 11</div>
+<div class="milestone-content">I. Foundation Research: v0.2 Foundation Research Completed, Seed Round ($3M) Closed, R&amp;D Team Strengthened to 5 Members, Advantage 4.1, Taproot Upgrade Success 11</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Foundation research for v0.2 was completed, establishing the mathematical framework for liquidity-constrained routing optimization. The model now incorporated channel capacity as a hard constraint, preventing routing attempts that would fail due to insufficient liquidity.
 
-Additional Technical Details:
-基礎研究v0
-
-
-I. Foundation Researchv0.2の基礎Research完了 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Foundation Researchv0.2の基礎研究Completed</p></div>
+<p>I. Foundation Research: v0.2 Foundation Research Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,9 @@ I. Foundation Researchv0.2の基礎Research完了 [Note: Some Japanese text may 
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">The seed round of $3M was successfully closed, providing critical funding for research expansion. The R&amp;D team was expanded from 2 to 5 members, adding additional quantum computing and blockchain expertise. This funding milestone enabled us to accelerate research and begin planning for larger-scale simulations.
 
-Additional Business Details:
-2の基礎研究完了
-
-
-Seedラウンド($3M)Closed
-
 <p><strong>Additional Business Details:</strong></p>
-<p>シードラウンド($3M)Closed</p></div>
+<p>Seed Round ($3M) Closed</p>
+<p>R&amp;D Team Strengthened to 5 Members</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +194,9 @@ Seedラウンド($3M)Closed
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1Taprootアップグレード成功 11 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>R&amp;Dチームを5名にStrengthening</p></div>
+<p>Advantage 4.1</p>
+<p>Taproot Upgrade Success 11</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -218,16 +205,8 @@ Advantage 4.1Taprootアップグレード成功 11 [Note: Some Japanese text may
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Bitcoin's Taproot upgrade was successfully activated, providing a strong foundation for future Lightning Network enhancements. This upgrade created optimism about LN's future capabilities and validated our research focus.
 
-Additional Market Information:
-Taprootアップグレード成功 11
-
-[Translation needed: Taprootアップグレード成功 11]
-
-
-Advantage 4.1Taprootアップグレード成功 11 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Market Information:</strong></p>
-<p>Advantage 4.1TaprootアップグレードSuccess 11</p></div>
+<p>Taproot Upgrade Success 11</p></div>
 </div>
 </div>
 <footer class="footer">
