--- a/reports/2022-04.html
+++ b/reports/2022-04.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancement10,000ノードでのv0.2SimulationStarted Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Announcement 11</div>
+<div class="milestone-content">I. Model Enhancement: v0.2 Simulation Started on 10,000 Nodes, Advantage 4.1 (Hybrid), Taro Protocol (Now Taproot Assets) Announcement 11</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Simulation testing of v0.2 model began on 10,000-node networks. These large-scale stress tests were designed to evaluate model performance under realistic network conditions, including varying payment sizes, network congestion scenarios, and channel liquidity distributions. The tests provided critical data on scalability and optimization quality.
 
-Additional Technical Details:
-モデル高度化10,000ノードでのv0
-
-
-I. Model Enhancement10,000ノードでのv0.2シミュレーションStarted
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model Enhancement10,000ノードでのv0.2SimulationStarted</p></div>
+<p>I. Model Enhancement: v0.2 Simulation Started on 10,000 Nodes</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Model Enhancement10,000ノードでのv0.2シミュレーションStarted
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Hardware Specifications:
-Advantage 4.1 (Hybrid)Taroプロトコル（現
-
-Hardware Specifications:
-[Translation needed: Advantage 4.1 (Hybrid)Taroプロトコル（現]
-
-Hardware Specifications:
-Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Presented 11 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1 (Hybrid)</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,13 +193,8 @@ Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Presented 11 [No
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">The Taro protocol (now Taproot Assets) was announced, signaling future expansion of Lightning Network capabilities to support multiple asset types, which would increase routing complexity.
 
-Additional Market Information:
-Taproot Assets）発表 11
-
-[Translation needed: Taproot Assets）発表 11]
-
-
-Advantage 4.1 (Hybrid)Taroプロトコル（現Taproot Assets）Presented 11 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>Taro Protocol (Now Taproot Assets) Announcement 11</p></div>
 </div>
 </div>
 <footer class="footer">
