--- a/reports/2022-08.html
+++ b/reports/2022-08.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancementv1.0のImplementationInitiated IEEE Blockchain 2022 24 等のConferencePreparation Advantage 4.1 (Hybrid)LN学術研究が活発化 24</div>
+<div class="milestone-content">I. Model Enhancement: v1.0 Implementation Initiated, Conference Preparation for IEEE Blockchain 2022 24, Advantage 4.1 (Hybrid), LN Academic Research Active 24</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Implementation of v1.0 model began, incorporating the reliability and rebalancing components. This required significant development effort to integrate multiple optimization objectives into a single QUBO formulation. Debugging and optimization of the implementation process was ongoing throughout the month.
 
-Additional Technical Details:
-モデル高度化v1
-
-
-I. Model Enhancementv1.0のImplementationにInitiated
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model Enhancementv1.0のImplementationInitiated</p></div>
+<p>I. Model Enhancement: v1.0 Implementation Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Model Enhancementv1.0のImplementationにInitiated
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Preparation for IEEE Blockchain 2022 conference began. We planned to present our v0.2 research results, establishing our technical credibility in the academic blockchain research community.
 
-Additional Business Details:
-0の実装に着手
-
-
-Advantage 4.1 (Hybrid)LN学術ResearchがActivation 24 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>IEEE Blockchain 2022 24 等のConferencePreparation</p></div>
+<p>Conference Preparation for IEEE Blockchain 2022 24</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,14 +193,8 @@ Advantage 4.1 (Hybrid)LN学術ResearchがActivation 24 [Note: Some Japanese text
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Hardware Specifications:
-IEEE Blockchain 2022 24 等の学会準備
-
-Hardware Specifications:
-Advantage 4.1 (Hybrid)LN学術ResearchがActivation 24 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1 (Hybrid)LN学術研究が活発化 24</p></div>
+<p>Advantage 4.1 (Hybrid)</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -220,9 +202,8 @@ Advantage 4.1 (Hybrid)LN学術ResearchがActivation 24 [Note: Some Japanese text
 <div class="milestone-item">
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Lightning Network academic research was becoming more active, with multiple research groups publishing papers on routing optimization and network analysis.
-
-
-Advantage 4</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>LN Academic Research Active 24</p></div>
 </div>
 </div>
 <footer class="footer">
