--- a/reports/2022-10.html
+++ b/reports/2022-10.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model Enhancementv1.0（Full specification）とClassical algorithm（Mission Control 15）のLarge-scaleComparisonベンチマークStarted Advantage 4.1 (Hybrid)</div>
+<div class="milestone-content">I. Model Enhancement: Large-Scale Comparison Benchmark Started - v1.0 (Full Specification) vs Classical Algorithm (Mission Control 15), Advantage 4.1 (Hybrid)</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Large-scale comparative benchmarking began between LN-QUBO v1.0 (full specification) and classical algorithms, specifically LND's Mission Control system. The benchmarks were designed to test performance across various scenarios: different payment sizes, network congestion levels, and liquidity distributions. This comprehensive comparison would provide definitive evidence of our approach's advantages.
 
-Additional Technical Details:
-モデル高度化v1
-
-
-I. Model Enhancementv1.0（フルスペック）と古典的アルゴリズム（Mission Control 15）の大規模比較BenchmarkStarted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model Enhancementv1.0（Full specification）とClassical algorithm（Mission Control 15）のLarge-scaleComparisonベンチマークStarted</p></div>
+<p>I. Model Enhancement: Large-Scale Comparison Benchmark Started - v1.0 (Full Specification) vs Classical Algorithm (Mission Control 15)</p></div>
 </div>
 </div>
 <div class="content-section">
