--- a/reports/2022-11.html
+++ b/reports/2022-11.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Model EnhancementベンチマークInterim report：Large-scale支払いのSuccess rate60%Improvement 2023年のシリーズAに向けたInitialPreparation Advantage 4.1 (Hybrid)暗号資産市場、FTX破綻により冷え込む</div>
+<div class="milestone-content">I. Model Enhancement: Benchmark Interim Report - Large-Scale Payment Success Rate 60% Improvement, Initial Preparation for 2023 Series A, Advantage 4.1 (Hybrid), Cryptocurrency Market Cooled Down Due to FTX Collapse</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Intermediate benchmark report revealed that v1.0 achieved a 60% improvement in routing success rate for large payments (over 1 million Satoshi) compared to classical heuristics. This dramatic improvement validated our core hypothesis that quantum annealing could solve complex multi-objective optimization problems more effectively than classical approaches.
 
-Additional Technical Details:
-モデル高度化Benchmark中間報告：大規模支払いの成功率60%向上
-
-
-I. Model EnhancementBenchmark中間報告：大規模支払いの成功率60%向上 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Model EnhancementベンチマークInterim report：Large-scale支払いのSuccess rate60%Improvement</p></div>
+<p>I. Model Enhancement: Benchmark Interim Report - Large-Scale Payment Success Rate 60% Improvement</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Model EnhancementBenchmark中間報告：大規模支払いの成功率60%向
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Initial preparation for Series A fundraising in 2023 began. The strong benchmark results provided compelling evidence for the value of our research approach, strengthening our position for future funding discussions.
 
-Additional Business Details:
-2023年のシリーズAに向けた初期準備
-
-
-Advantage 4.1 (Hybrid)Cryptocurrency市場、FTXCollapseにより冷え込む [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>2023年のシリーズAに向けたInitialPreparation</p></div>
+<p>Initial Preparation for 2023 Series A</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ Advantage 4.1 (Hybrid)Cryptocurrency市場、FTXCollapseにより冷え込む [N
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1 (Hybrid)
 
-Hardware Specifications:
-Advantage 4.1 (Hybrid)Cryptocurrency市場、FTXCollapseにより冷え込む [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1 (Hybrid)暗号資産市場、FTX破綻により冷え込む</p></div>
+<p>Advantage 4.1 (Hybrid)</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -218,11 +203,8 @@ Advantage 4.1 (Hybrid)Cryptocurrency市場、FTXCollapseにより冷え込む [N
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">The cryptocurrency market experienced significant cooling following the FTX collapse, creating challenging conditions for blockchain-related fundraising.
 
-Additional Market Information:
-1 (Hybrid)暗号資産市場、FTX破綻により冷え込む
-
-
-Advantage 4.1 (Hybrid)Cryptocurrency市場、FTXCollapseにより冷え込む [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>Cryptocurrency Market Cooled Down Due to FTX Collapse</p></div>
 </div>
 </div>
 <footer class="footer">
