--- a/reports/2023-02.html
+++ b/reports/2023-02.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">I. Benchmarkv1.0モデルのParameters・Tuning VCからのResponseがSluggish、StrategyのReviewをForced Advantage 4.1NostrがLN普及を牽引 37</div>
+<div class="milestone-content">I. Benchmark: v1.0 Model Parameters and Tuning, VC Response Sluggish Forcing Strategy Review, Advantage 4.1, Nostr Driving LN Adoption 37</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Parameter tuning of the v1.0 model continued, optimizing the weights of different cost function components to achieve the best balance between fee minimization, reliability, and rebalancing objectives. This fine-tuning process required extensive simulation testing and iterative refinement.
 
-Additional Technical Details:
-Benchmarkv1
-
-
-I. Benchmarkv1.0モデルのパラメータ・チューニング
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>I. Benchmarkv1.0モデルのParameters・Tuning</p></div>
+<p>I. Benchmark: v1.0 Model Parameters and Tuning</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ I. Benchmarkv1.0モデルのパラメータ・チューニング
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">VC responses to our Series A outreach were tepid, forcing a strategic review. The 'Web3' and 'blockchain' labels were creating resistance among investors who had become skeptical of the sector following market downturns. We recognized the need to reframe our narrative.
 
-Additional Business Details:
-0モデルのパラメータ・チューニング
-
-
-VCからの反応が鈍く、戦略の見直しを迫られる [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>VCからのResponseがSluggish、StrategyのReviewをForced</p></div>
+<p>VC Response Sluggish Forcing Strategy Review</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ VCからの反応が鈍く、戦略の見直しを迫られる [Note: Some Japan
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-VCからの反応が鈍く、戦略の見直しを迫られる
-
-Hardware Specifications:
-Advantage 4.1NostrがLN普及を牽引 37 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -218,13 +203,8 @@ Advantage 4.1NostrがLN普及を牽引 37 [Note: Some Japanese text may need man
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Nostr protocol was driving Lightning Network adoption, creating new use cases and increasing network activity. This growth validated the importance of efficient routing solutions.
 
-Additional Market Information:
-Advantage 4
-
-[Translation needed: NostrがLN普及を牽引 37]
-
-
-Advantage 4.1NostrがLN普及を牽引 37 [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>Nostr Driving LN Adoption 37</p></div>
 </div>
 </div>
 <footer class="footer">
