--- a/reports/2023-10.html
+++ b/reports/2023-10.html
@@ -158,13 +158,13 @@
 <a class="back-link" href="../index.html">← Back to Report List</a>
 <header>
 <div class="report-date">Created October 31, 2023</div>
-<h1>Business Milestones：シリーズA ($15M) クローズ &amp; Taproot Assets への対応開始</h1>
+<h1>Business Milestones: Series A ($15M) Closed &amp; Taproot Assets Support Started</h1>
 </header>
 <div class="content-section">
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic Pivotv1.5のSimulationEnvironmentへのImplementationInitiated シリーズA ($15M) Closed Advantage 4.1Taproot Assets メインネット対応 26</div>
+<div class="milestone-content">II. Strategic Pivot: v1.5 Implementation in Simulation Environment Initiated, Series A ($15M) Closed, Advantage 4.1, Taproot Assets Mainnet Support 26</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Implementation of v1.5 in the simulation environment began. The multi-asset routing model required significant development work to handle the increased complexity of routing decisions across multiple asset types.
 
-Additional Technical Details:
-戦略的ピボットv1
-
-
-II. Strategic Pivotv1.5のシミュレーション環境へのImplementationにInitiated [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>II. Strategic Pivotv1.5のSimulationEnvironmentへのImplementationInitiated</p></div>
+<p>II. Strategic Pivot: v1.5 Implementation in Simulation Environment Initiated</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ II. Strategic Pivotv1.5のシミュレーション環境へのImplementationにI
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Series A round of $15M was successfully closed. This major funding milestone provided resources to accelerate research, expand the team, and begin planning for alpha testing with real network partners. Simultaneously, we began preparing for Taproot Assets support, recognizing it as a critical future capability.
 
-Additional Business Details:
-5のシミュレーション環境への実装に着手
-
-
-Advantage 4.1Taproot Assets メインネットResponse 26
-
 <p><strong>Additional Business Details:</strong></p>
-<p>シリーズA ($15M) Closed</p></div>
+<p>Series A ($15M) Closed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,9 @@ Advantage 4.1Taproot Assets メインネットResponse 26
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-Advantage 4.1Taproot Assets メインネットResponse 26
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage 4.1Taproot Assets メインネット対応 26</p></div>
+<p>Advantage 4.1</p>
+<p>Taproot Assets Mainnet Support 26</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -218,13 +204,8 @@ Advantage 4.1Taproot Assets メインネットResponse 26
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Taproot Assets mainnet support was released, marking the beginning of multi-asset Lightning Network capabilities. This validated our v1.5 research direction and created immediate market need for multi-asset routing optimization.
 
-Additional Market Information:
-Taproot Assets メインネット対応 26
-
-[Translation needed: Taproot Assets メインネット対応 26]
-
-
-Advantage 4.1Taproot Assets メインネットResponse 26</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>Taproot Assets Mainnet Support 26</p></div>
 </div>
 </div>
 <footer class="footer">
