--- a/reports/2023-11.html
+++ b/reports/2023-11.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">II. Strategic Pivotv1.5の小規模SimulationStarted BD（事業Development）チームのHiredStarted Advantage 4.1</div>
+<div class="milestone-content">II. Strategic Pivot: Small-Scale Simulation of v1.5 Started, Business Development Team Hiring Started, Advantage 4.1</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Small-scale simulation testing of v1.5 began. Initial tests focused on validating the multi-asset Hamiltonian formulation and ensuring that the extended model maintained optimization quality while handling increased complexity.
 
-Additional Technical Details:
-戦略的ピボットv1
-
-
-II. Strategic Pivotv1.5の小規模シミュレーションStarted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>II. Strategic Pivotv1.5の小規模SimulationStarted</p></div>
+<p>II. Strategic Pivot: Small-Scale Simulation of v1.5 Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ II. Strategic Pivotv1.5の小規模シミュレーションStarted [Note: Some J
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Business development (BD) team hiring began. As we prepared for alpha testing with real network partners, we needed dedicated resources for partnership development and relationship management.
 
-Additional Business Details:
-5の小規模シミュレーション開始
-
-
-Business Development（事業Development）チームのAdoptionStarted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>BD（事業Development）チームのHiredStarted</p></div>
+<p>Business Development Team Hiring Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ Business Development（事業Development）チームのAdoptionStarted [Note: So
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage 4.1
 
-Hardware Specifications:
-BD（事業開発）チームの採用開始
-
-Hardware Specifications:
-Advantage 4.1</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage 4.1</p></div>
 </div>
 </div>
 <footer class="footer">
