--- a/reports/2025-01.html
+++ b/reports/2025-01.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GA PreparationLND/CLNのPlugin architecture 14 にCompliantしたAPI（v0.9）のDevelopment Presales（GAAdvance reservation）をStarted Advantage2 ProtoLNクライアントのプラグイン議論が活発化 14</div>
+<div class="milestone-content">IV. GA Preparation: API (v0.9) Compliant with LND/CLN Plugin Architecture 14 Development Started, Research Collaboration Discussions Started, Advantage2 Proto, LN Client Plugin Discussions Active 14</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Development of API (v0.9) compliant with LND/CLN plugin architecture began. This API would enable seamless integration of our optimization engine with existing Lightning Network node software, allowing node operators to use our routing optimizations without major infrastructure changes.
 
-Additional Technical Details:
-GA準備LND/CLNプラグインアーキテクチャ 14 に準拠したAPI（v0
-
-
-IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.9）のDevelopment [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GA PreparationLND/CLNのPlugin architecture 14 にCompliantしたAPI（v0.9）のDevelopment</p></div>
+<p>IV. GA Preparation: API (v0.9) Compliant with LND/CLN Plugin Architecture 14 Development Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Research collaboration discussions began. We reached out to additional potential research partners, presenting our alpha test results and proposing expanded collaboration opportunities. The goal was to build a broader research network for validating and improving our optimization technology.
 
-Additional Business Details:
-9）の開発
-
-
-Presales（GA先行予約）をStarted [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>Presales（GAAdvance reservation）をStarted</p></div>
+<p>Research Collaboration Discussions Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,14 +193,8 @@ Presales（GA先行予約）をStarted [Note: Some Japanese text may need manual
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-GA準備LND/
-
-Hardware Specifications:
-IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.9）のDevelopment [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage2 ProtoLNクライアントのプラグイン議論が活発化 14</p></div>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -221,11 +203,8 @@ IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Lightning Network client developers were actively discussing plugin architectures for pathfinding, creating a receptive environment for our API development approach.
 
-Additional Market Information:
-Advantage2 ProtoLNクライアントのプラグイン議論が活発化 14
-
-
-IV. GA PreparationLND/CLNPluginアーキテクチャ 14 に準拠したAPI（v0.9）のDevelopment [Note: Some Japanese text may need manual translation]</div>
+<p><strong>Additional Market Information:</strong></p>
+<p>LN Client Plugin Discussions Active 14</p></div>
 </div>
 </div>
 <footer class="footer">
