--- a/reports/2025-03.html
+++ b/reports/2025-03.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GA PreparationPathfinder-Q API v0.9Completed パートナーによるFinal test Advantage2 Proto</div>
+<div class="milestone-content">IV. GA Preparation: Pathfinder-Q API v0.9 Completed, Final Test by Partners, Advantage2 Proto</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Pathfinder-Q API v0.9 was completed. This version provided core optimization functionality through a plugin-compatible interface, enabling integration with LND and CLN node software. The API was designed to be non-intrusive, working alongside existing routing systems.
 
-Additional Technical Details:
-GA準備Pathfinder-Q API v0
-
-
-IV. GA PreparationPathfinder-Q API v0.9Completion
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GA PreparationPathfinder-Q API v0.9Completed</p></div>
+<p>IV. GA Preparation: Pathfinder-Q API v0.9 Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +183,8 @@ IV. GA PreparationPathfinder-Q API v0.9Completion
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Final testing by research partners began. Partners who had participated in alpha testing were invited to test the v0.9 API, providing feedback on integration, performance, and usability before open source release.
 
-Additional Business Details:
-9完成
-
-
-Partnersによる最終Test [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>パートナーによるFinal test</p></div>
+<p>Final Test by Partners</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,11 +193,8 @@ Partnersによる最終Test [Note: Some Japanese text may need manual translatio
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 Proto
 
-Hardware Specifications:
-Partnersによる最終テスト
-
-Hardware Specifications:
-IV. GA PreparationPathfinder-Q API v0.9Completion</div>
+<p><strong>Hardware Specifications:</strong></p>
+<p>Advantage2 Proto</p></div>
 </div>
 </div>
 <footer class="footer">
