--- a/reports/2025-05.html
+++ b/reports/2025-05.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. GAFull specificationのAdvantage2（4400+Q, 20-way）がGA 9 バックエンドを即時Migration For mediaにGAをAnnouncement 23 Advantage2 GA 9Advantage2 GA 9</div>
+<div class="milestone-content">IV. GA: Full Specification Advantage2 (4400+ Qubits, 20-way) GA 9, Backend Immediate Migration, GA Announcement to Media 23, Advantage2 GA 9</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,9 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Full-spec Advantage2 (4400+ Qubits, 20-way connectivity) became generally available. Our backend systems were immediately migrated to the new hardware. The improved connectivity was particularly important, as it enabled more efficient embedding of dense Lightning Network graph structures into the quantum annealer.
 
-Additional Technical Details:
-GAフルスペックのAdvantage2（4400+Q, 20-way）がGA 9
-
-
-バックエンドを即時移行 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>IV. GAFull specificationのAdvantage2（4400+Q, 20-way）がGA 9</p></div>
+<p>IV. GA: Full Specification Advantage2 (4400+ Qubits, 20-way) GA 9</p>
+<p>Backend Immediate Migration</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,14 +184,8 @@ GAフルスペックのAdvantage2（4400+Q, 20-way）がGA 9
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Research release was announced to media and the Lightning Network community. We positioned Pathfinder-Q as an open source research contribution, emphasizing collaboration and community involvement rather than commercial objectives.
 
-Additional Business Details:
-バックエンドを即時移行
-
-
-メディア向けにGAをPresented 23 [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Business Details:</strong></p>
-<p>バックエンドを即時Migration</p></div>
+<p>GA Announcement to Media 23</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -205,14 +194,9 @@ Additional Business Details:
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 GA
 
-Hardware Specifications:
-メディア向けにGAを発表 23
-
-Hardware Specifications:
-IV. GAフルスペックのAdvantage2（4400+Q, 20-way）がGA 9
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>For mediaにGAをAnnouncement 23</p></div>
+<p>Advantage2 GA 9</p>
+<p>Full Specification Advantage2 (4400+ Qubits, 20-way) GA 9</p></div>
 </div>
 </div>
 <div class="content-section">
