--- a/reports/2025-12.html
+++ b/reports/2025-12.html
@@ -164,7 +164,7 @@
 <h2 class="section-title">Phase</h2>
 <div class="milestone-item">
 <div class="milestone-label">Current Phase</div>
-<div class="milestone-content">IV. CommercializationPathfinder-Q v1.1（Taproot Assets Beta support）をリリース</div>
+<div class="milestone-content">IV. Commercialization: Pathfinder-Q v1.1 Released with Taproot Assets Beta Support</div>
 </div>
 </div>
 <div class="content-section">
@@ -173,14 +173,8 @@
 <div class="milestone-label">Key Activities</div>
 <div class="milestone-content">Pathfinder-Q v1.1 was released with Taproot Assets beta support. This version incorporated feedback from limited beta testing and provided stable multi-asset routing optimization capabilities. The 2026 roadmap for DeFi liquidity optimization was formulated, outlining future research directions beyond Lightning Network.
 
-Additional Technical Details:
-Commercial化Pathfinder-Q v1
-
-
-2026年Roadmap（DeFi流動性最適化）Planning [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Technical Details:</strong></p>
-<p>2026年Roadmap（DeFi流動性最適化）策定</p></div>
+<p>2026 Roadmap (DeFi Liquidity Optimization) Planning Completed</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -189,13 +183,8 @@ Commercial化Pathfinder-Q v1
 <div class="milestone-label">Business Activities</div>
 <div class="milestone-content">Research collaboration results from initial partners showed 70% reduction in routing failure rates and 30% performance improvement in capital efficiency. These results were documented in research reports (case studies) that demonstrated the value of our optimization approach. Series B funding preparation began, seeking resources to expand research into DeFi optimization applications.
 
-Additional Business Details:
-Commercial化Pathfinder-Q v1.1（
-
-[Translation needed: Commercial化Pathfinder-Q v1.1（]
-
-
-シリーズBのPreparationStarted</div>
+<p><strong>Additional Business Details:</strong></p>
+<p>Series B Funding Preparation Started</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -204,11 +193,8 @@ Commercial化Pathfinder-Q v1.1（
 <div class="milestone-label">Hardware Used</div>
 <div class="milestone-content">Advantage2 GA (Hybrid)
 
-Hardware Specifications:
-Advantage2 GA (Hybrid)Year-end商戦におけるLN決済のTrafficIncreaseにResponseVI. QuantumLightning社 月次レポートタイトル一覧 (2021-2025)以下の表2は、QuantumLightning社が設立から5年間にわたり、投資家やステークホルダー向けに発行した（とされる）月次レポートのタイトル60ヶ月分の一覧です [Note: Some Japanese text may need manual translation]
-
 <p><strong>Hardware Specifications:</strong></p>
-<p>Advantage2 GA (Hybrid)年末商戦におけるLN決済のトラフィック増に対応VI. QuantumLightning社 月次Reportタイトル一覧 (2021-2025)以下の表2は、QuantumLightning社が設立から5年間にわたり、Investment家やステークホルダー向けに発行した（とされる）月次Reportのタイトル60ヶ月分の一覧です</p></div>
+<p>Advantage2 GA (Hybrid) - Responding to Increased LN Payment Traffic During Year-end Shopping Season</p></div>
 </div>
 </div>
 <div class="content-section">
@@ -217,16 +203,8 @@ Advantage2 GA (Hybrid)Year-end商戦におけるLN決済のTrafficIncreaseにRes
 <div class="milestone-label">Market Environment</div>
 <div class="milestone-content">Year-end shopping season brought increased Lightning Network payment traffic, creating real-world stress testing opportunities for routing optimization. The network's growth validated the importance of advanced optimization research.
 
-Additional Market Information:
-年末商戦におけるLN決済のトラフィック増に対応VI. QuantumLightning社 月次レポートタイトル一覧 (
-
-[Translation needed: Year-end商戦におけるLN決済のトラフィック増に対応VI. QuantumLightning社 月次レポートタイトル一覧 (]
-
-
-このタイトルの変遷は、同社の技術的進捗、市場環境の変化、そして戦略的ナラティブの進化（特に2023年の「AIへのピボット」25 と2024-2025年の「Advantage2」9 によるブレークスルー）を時系列で反映しています [Note: Some Japanese text may need manual translation]
-
 <p><strong>Additional Market Information:</strong></p>
-<p>このタイトルの変遷は、同社の技術的進捗、市場Environmentの変化、そしてStrategy的Narrativeの進化（特に2023年の「AIへのピボット」25 と2024-2025年の「Advantage2」9 によるブレークスルー）を時系列で反映しています</p></div>
+<p>The evolution of these titles reflects the company's technical progress, changes in market environment, and evolution of strategic narrative (particularly the 2023 "AI Pivot" and the 2024-2025 "Advantage2" breakthrough) in chronological order.</p></div>
 </div>
 </div>
 <footer class="footer">
